# duckstring

./: .gitignore  CLAUDE.md  MANIFEST.in  Makefile  README.md  pyproject.toml  todo.md
.github/workflows/: ci.yml  release.yml
brand/: copy.md  strategy.md
docs/: README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs/basin/: README.md
docs/catchment/: README.md
docs/catchment/inlets/: README.md
docs/catchment/ponds/: README.md
docs/catchment/species/: README.md
docs/demo/: README.md
docs/docs/: incremental-theory.md  index.md  theory.md
docs/docs/concepts/: catchment.md  freshness.md  ponds.md  puddles.md  ripples.md  trickle.md  versioning.md
docs/docs/getting-started/: installation.md  playground.md  quickstart.md
docs/docs/guides/: connecting-catchments.md  control.md  creating-a-pond.md  deploying.md  external-pipelines.md  fault-tolerance.md  incremental-ripples.md  local-testing.md  querying-data.md  running-a-catchment.md  trickle.md  triggers.md  web-ui.md  windows.md
docs/docs/reference/: architecture.md  cli.md  http-api.md  pond-toml.md  python-api.md
docs/guide/: catchment.md  orchestration  orchestration.md  ponds.md  ripples.md  theory.md
docs/periscope/: README.md
docs/src/css/: custom.css
docs/src/pages/: index.module.css  index.tsx
docs/src/theme/: Root.tsx
frontend/: README.md  next.config.ts  package-lock.json  package.json  todo.md
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AlertsMenu.tsx  App.tsx  CatchmentGroupNode.tsx  ConfirmDialog.tsx  ConsolePanel.tsx  DagCanvas.tsx  DataViewerModal.tsx  DemandIndicators.tsx  Playground.tsx  PondNode.tsx  RemotePondNode.tsx  RippleNode.tsx  RunDetail.tsx  RunHistory.tsx  SecretsMenu.tsx  Sidebar.tsx  TraceChart.tsx  TriggerNode.tsx  WindowEditor.tsx
frontend/src/lib/: api.ts  layout.ts  lineage.ts  orchestration.ts  store.ts  types.ts  useIsMobile.ts
plans/: alerts.md  cross-catchment-ducts.md  cross-catchment-visibility.md  data-plane-ducklake.md  data-plane-iceberg.md  data-plane-mash-clustering.md  data-plane-mash-sidecars.md  deletes.md  egress.md  minted-freshness.md  no-change-skip.md  objects.md  refresh.md  reset.md  storage-decoupling.md  trickle-agg.md  trickle-dag.md  trickle-dbsp.md  trickle-main-incremental.md  trickle-relational.md  trickle.md
playground/: README.md  next.config.ts  package-lock.json  package.json
playground/src/app/: globals.css  layout.tsx  page.tsx
playground/src/components/: ConsolePanel.tsx  DagCanvas.tsx  DemandIndicators.tsx  Playground.tsx  PondNode.tsx  RippleNode.tsx  Sidebar.tsx  SimControls.tsx  TraceChart.tsx  TriggerNode.tsx  WindowEditor.tsx
playground/src/lib/: graph.ts  layout.ts  orchestration.ts  store.ts  types.ts  useIsMobile.ts
src/duckstring/: __init__.py  __main__.py  acc.py  agg.py  core.py  dataplane.py  engine.py  iceberg_catalog.py  iceberg_plane.py  keys.py  objects.py  schema_contract.py  storage.py  trickle_builder.py  trickle_io.py
src/duckstring/alerts/: __init__.py  base.py  (+3 more)
tests/: conftest.py  test_access_levels.py  test_alerts.py  test_auth.py  test_catchment.py  test_catchment_app.py  test_cli_basin.py  test_cli_catchment_pull.py  test_config.py  test_core.py  test_data.py  test_data_lease.py  test_dataplane.py  test_deploy.py  test_download.py  test_duck.py  test_duct.py  test_egress_credentials.py  test_egress_file.py  test_egress_postgres.py  test_engine.py  test_engine_split.py  test_execute.py  test_iceberg.py  test_metrics.py  test_multimajor.py  test_no_change.py  test_objects.py  test_orchestrator.py  test_platform.py  test_pond.py  test_puddle.py  test_restart.py  test_runtime.py  test_schema_contract.py  test_secrets.py  test_spout.py  test_state_sync.py  test_static.py  test_status.py  (+5 more)
(+133 files in other folders)
