[project]
name = "duckstring"
version = "0.1.0"
description = "Duckstring is a Python-native data-mesh orchestration framework built on DuckDB as a default engine that composes local and remote datasets into reproducible, dependency-aware analytical pipelines."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Isaac Harvey", email = "dev@isaacharvey.com" }
]

dependencies = [
  "duckdb>=0.10",
  "rich>=13.7",
  "typer>=0.12",
  "fastapi>=0.111",
  "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.3",
  "mypy>=1.8",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.package-data]
"duckstring.catchment" = ["static/**/*"]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
duckstring = "duckstring.cli:main"
ds = "duckstring.cli:main"

[tool.ruff]
line-length = 128
target-version = "py310"
extend-exclude = ["experiment"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
