[project]
name = "duckstring"
version = "0.2.0"
description = "Build data pipelines the way you build software: version each transform, declare its dependencies, and Duckstring resolves the execution DAG automatically."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Duckstring", email = "dev@duckstring.com" }
]

dependencies = [
  "duckdb>=0.10",
  "rich>=13.7",
  "typer>=0.12",
  "fastapi>=0.111",
  "python-multipart>=0.0.9",
  "uvicorn[standard]>=0.29",
  "httpx>=0.25",
  "tomli>=2.0; python_version < '3.11'",
  "tomli-w>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-timeout>=0.5",
  "ruff>=0.3",
  "mypy>=1.8",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.package-data]
"duckstring.catchment" = ["static/**/*", "schema/*.sql"]
"duckstring" = ["demo/**/*", "demo/**/.gitignore"]

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://duckstring.com"
Documentation = "https://docs.duckstring.com"
Repository = "https://github.com/duckstring-dev/duckstring"
Playground = "https://playground.duckstring.com"

[project.scripts]
duckstring = "duckstring.cli:main"
ds = "duckstring.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 1

[tool.ruff]
line-length = 128
target-version = "py310"
extend-exclude = ["experiment"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["B008"]  # typer.Option/Argument in defaults is intentional
